# roms_grid_tools

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: Test_nesting_bichan.ipynb  example.py
roms_grid_tools/: __init__.py  contact.py  contact_new.py  contact_old.py  data_structures.py  grid_utils.py  nested_grids.py  weights.py
roms_grid_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic.py
